--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,5 +8,6 @@
 	<h2>게시판 프로그램</h2>
 	<a href="board/getBoardList">글 목록 바로가기</a><br>
 	<a href="system/login">로그인</a>
+	<h2>HI, There</h2>
 </body>
 </html>
